SERVER-50832 Fix uninitialized scalar field in DocumentSourceListSessions